Fix an issue that ResourceDownloader was never deleted on download completion

This CL calls the InProgressDownloadManager to delete ResourceDownloader
after response is completed.
It also fixes the issue when download is cancelled.

BUG=864189

Change-Id: I184d5faaace90f49874e45b4126a0a9821fdced7
Reviewed-on: https://chromium-review.googlesource.com/1138676
Commit-Queue: Min Qin <qinmin@chromium.org>
Reviewed-by: Xing Liu <xingliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575882}
Former-commit-id: e0b12de09e77d5954ace778522cf1a41c90f13aa